==> feaser/openblt/Target/Source/ARMCM4_STM32/can.c <==
#include "boot.h"                                /* bootloader generic header          */
#define CAN_BIT_RESET    ((blt_int32u)0x00008000)
#define CAN_BIT_INRQ     ((blt_int32u)0x00000001)
#define CAN_BIT_INAK     ((blt_int32u)0x00000001)
#define CAN_BIT_SLEEP    ((blt_int32u)0x00000002)
#define CAN_BIT_FILTER0  ((blt_int32u)0x00000001)
#define CAN_BIT_FILTER14 ((blt_int32u)0x00004000)
#define CAN_BIT_FINIT    ((blt_int32u)0x00000001)
#define CAN_BIT_TME0     ((blt_int32u)0x04000000)
#define CAN_BIT_TXRQ     ((blt_int32u)0x00000001)
#define CAN_BIT_RFOM0    ((blt_int32u)0x00000020)
#define CANx             ((tCanRegs *) (blt_int32u)0x40006400)
#define CANx             ((tCanRegs *) (blt_int32u)0x40006800)
#define CAN1             ((tCanRegs *) (blt_int32u)0x40006400)

void CanInit(void)
{
  blt_int16u prescaler;
  blt_int8u  tseg1, tseg2;
  blt_bool   result;

  /* the current implementation supports CAN1 and 2. throw an assertion error in case a 
   * different CAN channel is configured.  
   */
  ASSERT_CT((BOOT_COM_CAN_CHANNEL_INDEX == 0 || BOOT_COM_CAN_CHANNEL_INDEX == 1)); 

  /* obtain bittiming configuration information */
  result = CanGetSpeedConfig(BOOT_COM_CAN_BAUDRATE/1000, &prescaler, &tseg1, &tseg2);
  ASSERT_RT(result == BLT_TRUE);
  /* disable all can interrupt. this driver works in polling mode */
  CANx->IER = (blt_int32u)0;
  /* set request to reset the can controller */
  CANx->MCR |= CAN_BIT_RESET ;
  /* wait for acknowledge that the can controller was reset */
  while ((CANx->MCR & CAN_BIT_RESET) != 0)
  {
    /* keep the watchdog happy */
    CopService();
  }
  /* exit from sleep mode, which is the default mode after reset */
  CANx->MCR &= ~CAN_BIT_SLEEP;
  /* set request to enter initialisation mode */
  CANx->MCR |= CAN_BIT_INRQ ;
  /* wait for acknowledge that initialization mode was entered */
  while ((CANx->MSR & CAN_BIT_INAK) == 0)
  {
    /* keep the watchdog happy */
    CopService();
  }
  /* configure the bittming */
  CANx->BTR = (blt_int32u)((blt_int32u)(tseg1 - 1) << 16) | \
              (blt_int32u)((blt_int32u)(tseg2 - 1) << 20) | \
              (blt_int32u)(prescaler - 1);
  /* set request to leave initialisation mode */
  CANx->MCR &= ~CAN_BIT_INRQ;
  /* wait for acknowledge that initialization mode was exited */
  while ((CANx->MSR & CAN_BIT_INAK) != 0)
  {
    /* keep the watchdog happy */
    CopService();
  }

#if (BOOT_COM_CAN_CHANNEL_INDEX == 0)
  /* enter initialisation mode for the acceptance filter */
  CAN1->FMR |= CAN_BIT_FINIT;
  /* deactivate filter 0 */
  CAN1->FA1R &= ~CAN_BIT_FILTER0;
  /* 32-bit scale for the filter */
  CAN1->FS1R |= CAN_BIT_FILTER0;
  /* open up the acceptance filter to receive all messages */
  CAN1->sFilterRegister[0].FR1 = 0; 
  CAN1->sFilterRegister[0].FR2 = 0; 
  /* select id/mask mode for the filter */
  CAN1->FM1R &= ~CAN_BIT_FILTER0;
  /* FIFO 0 assignation for the filter */
  CAN1->FFA1R &= ~CAN_BIT_FILTER0;
  /* filter activation */
  CAN1->FA1R |= CAN_BIT_FILTER0;
  /* leave initialisation mode for the acceptance filter */
  CAN1->FMR &= ~CAN_BIT_FINIT;
#else
  /* enter initialisation mode for the acceptance filter */
  CAN1->FMR |= CAN_BIT_FINIT;
  /* deactivate filter 14 */
  CAN1->FA1R &= ~CAN_BIT_FILTER14;
  /* 32-bit scale for the filter */
  CAN1->FS1R |= CAN_BIT_FILTER14;
  /* open up the acceptance filter to receive all messages */
  CAN1->sFilterRegister[14].FR1 = 0; 
  CAN1->sFilterRegister[14].FR2 = 0; 
  /* select id/mask mode for the filter */
  CAN1->FM1R &= ~CAN_BIT_FILTER14;
  /* FIFO 0 assignation for the filter */
  CAN1->FFA1R &= ~CAN_BIT_FILTER14;
  /* filter activation */
  CAN1->FA1R |= CAN_BIT_FILTER14;
  /* leave initialisation mode for the acceptance filter */
  CAN1->FMR &= ~CAN_BIT_FINIT;
#endif  
}

void CanTransmitPacket(blt_int8u *data, blt_int8u len)
{
  /* make sure that transmit mailbox 0 is available */
  ASSERT_RT((CANx->TSR&CAN_BIT_TME0) == CAN_BIT_TME0);
  /* store the 11-bit message identifier */
  CANx->sTxMailBox[0].TIR &= CAN_BIT_TXRQ;
  CANx->sTxMailBox[0].TIR |= ((blt_int32u)BOOT_COM_CAN_TX_MSG_ID << 21);
  /* store the message date length code (DLC) */
  CANx->sTxMailBox[0].TDTR = len;
  /* store the message data bytes */
  CANx->sTxMailBox[0].TDLR = (((blt_int32u)data[3] << 24) | \
                              ((blt_int32u)data[2] << 16) | \
                              ((blt_int32u)data[1] <<  8) | \
                              ((blt_int32u)data[0]));
  CANx->sTxMailBox[0].TDHR = (((blt_int32u)data[7] << 24) | \
                              ((blt_int32u)data[6] << 16) | \
                              ((blt_int32u)data[5] <<  8) | \
                              ((blt_int32u)data[4]));
  /* request the start of message transmission */
  CANx->sTxMailBox[0].TIR |= CAN_BIT_TXRQ;
  /* wait for transmit completion */
  while ((CANx->TSR&CAN_BIT_TME0) == 0)
  {
    /* keep the watchdog happy */
    CopService();
  }
}

blt_bool CanReceivePacket(blt_int8u *data)
{
  blt_int32u rxMsgId;
  blt_bool   result = BLT_FALSE;

  /* check if a new message was received */
  if ((CANx->RF0R&(blt_int32u)0x00000003) > 0)
  {
    /* read out the message identifier */
    rxMsgId = (blt_int32u)0x000007FF & (CANx->sFIFOMailBox[0].RIR >> 21);
    /* is this the packet identifier */
    if (rxMsgId == BOOT_COM_CAN_RX_MSG_ID)
    {
      result = BLT_TRUE;
      /* store the received packet data */
      data[0] = (blt_int8u)0xFF & CANx->sFIFOMailBox[0].RDLR;
      data[1] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDLR >> 8);
      data[2] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDLR >> 16);
      data[3] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDLR >> 24);
      data[4] = (blt_int8u)0xFF & CANx->sFIFOMailBox[0].RDHR;
      data[5] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDHR >> 8);
      data[6] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDHR >> 16);
      data[7] = (blt_int8u)0xFF & (CANx->sFIFOMailBox[0].RDHR >> 24);
    }
    /* release FIFO0 */
    CANx->RF0R |= CAN_BIT_RFOM0;
  }
  return result;
}
